--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "一个 Vue UI 轮子",
   "main": "index.js",
   "scripts": {
-    "dev-test": "parcel watch test/* --no-cache & karma start",
-    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
+    "dev-test": "parcel watch tests/* --no-cache & karma start",
+    "test": "parcel build tests/* --no-cache --no-minify && karma start --single-run"
   },
   "repository": {
     "type": "git",
