--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dp-wheel",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "一个 Vue UI 轮子",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev-test": "parcel watch tests/* --no-cache & karma start",
     "test": "parcel build tests/* --no-cache --no-minify && karma start --single-run"
