--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "dev-test": "parcel watch tests/* --no-cache & karma start",
-    "test": "parcel build tests/* --no-cache --no-minify && karma start --single-run"
+    "test": "parcel build tests/* --no-cache --no-minify && karma start --single-run",
+    "build": "parcel build index.js --no-cache --no-minify"
   },
   "repository": {
     "type": "git",
