--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "一个 Vue UI 轮子",
   "main": "dist/index.js",
   "scripts": {
+    "dev": "parcel index.html --no-cache",
     "dev-test": "parcel watch tests/* --no-cache & karma start",
     "test": "parcel build tests/* --no-cache --no-minify && karma start --single-run",
     "build": "parcel build index.js --no-cache --no-minify"
